edited login page

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:kat7gFqEm1CdYx5EiqL+ea2fZURd9Q4ptftjqm2PVH8=
-APP_DEBUG=false
-APP_URL=research.mattbacud.tech
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
